# gito-poc

./: README.md  pyproject.toml
.github/workflows/: tests.yml
gito/: __init__.py
tests/: test_basic.py
